WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46715
plugins/npruntime/invoke-failure.html fails in WebKit2 due to slightly different exception being thrown
https://bugs.webkit.org/show_bug.cgi?id=46715
Summary
plugins/npruntime/invoke-failure.html fails in WebKit2 due to slightly differ...
Adam Roben (:aroben)
Reported
2010-09-28 04:16:19 PDT
plugins/npruntime/invoke-failure.html fails in WebKit2 due to a slightly different exception being thrown. Here's the diff: --- /tmp/layout-test-results/plugins/npruntime/invoke-failure-expected.txt 2010-09-27 19:41:55.453000000 -0400 +++ /tmp/layout-test-results/plugins/npruntime/invoke-failure-actual.txt 2010-09-27 19:41:55.453000000 -0400 @@ -1,2 +1,2 @@ -SUCCESS: Exception caught: Error: Error calling method on NPObject! +SUCCESS: Exception caught: Error: Error calling method on NPObject.
Attachments
Patch
(2.44 KB, patch)
2010-09-29 16:14 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-28 04:30:39 PDT
<
rdar://problem/8485909
>
Anders Carlsson
Comment 2
2010-09-29 16:14:49 PDT
Created
attachment 69270
[details]
Patch
Darin Adler
Comment 3
2010-09-29 16:17:53 PDT
Comment on
attachment 69270
[details]
Patch Those exclamation points are horrible!
Anders Carlsson
Comment 4
2010-09-29 16:47:49 PDT
I talked to Darin and we agreed to get rid of the exclamation points everywhere instead.
Anders Carlsson
Comment 5
2010-09-29 16:48:01 PDT
Comment on
attachment 69270
[details]
Patch Clearing review flag.
Anders Carlsson
Comment 6
2010-09-29 16:52:50 PDT
Committed
r68716
: <
http://trac.webkit.org/changeset/68716
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug