plugins/npruntime/invoke-failure.html fails in WebKit2 due to slightly different exception being thrown https://bugs.webkit.org/show_bug.cgi?id=46715 <rdar://problem/8485909>

Reviewed by Darin Adler.

WebCore:

Remove exclamation points from exceptions.

* bindings/v8/V8NPObject.cpp:
(WebCore::npObjectInvokeImpl):
* bridge/c/c_instance.cpp:
(JSC::Bindings::CInstance::invokeMethod):
(JSC::Bindings::CInstance::invokeDefaultMethod):
(JSC::Bindings::CInstance::invokeConstruct):

LayoutTests:

Remove exclamation point.

* plugins/npruntime/invoke-failure-expected.txt:

Canonical link: https://commits.webkit.org/59358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68716 268f45cc-cd09-0410-ab3c-d52691b4dbfc