WebCore/bridge/c/c_instance.cpp
@@ -165,7 +165,7 @@ JSValue CInstance::invokeMethod(ExecState* exec, RuntimeMethod* runtimeMethod)
     }
     
     if (!retval)
-        throwError(exec, createError(exec, "Error calling method on NPObject!"));
+        throwError(exec, createError(exec, "Error calling method on NPObject."));
 
     for (i = 0; i < count; i++)
         _NPN_ReleaseVariantValue(&cArgs[i]);
@@ -200,7 +200,7 @@ JSValue CInstance::invokeDefaultMethod(ExecState* exec)
     }
     
     if (!retval)
-        throwError(exec, createError(exec, "Error calling method on NPObject!"));
+        throwError(exec, createError(exec, "Error calling method on NPObject."));
 
     for (i = 0; i < count; i++)
         _NPN_ReleaseVariantValue(&cArgs[i]);
@@ -239,7 +239,7 @@ JSValue CInstance::invokeConstruct(ExecState* exec, const ArgList& args)
     }
     
     if (!retval)
-        throwError(exec, createError(exec, "Error calling method on NPObject!"));
+        throwError(exec, createError(exec, "Error calling method on NPObject."));
 
     for (i = 0; i < count; i++)
         _NPN_ReleaseVariantValue(&cArgs[i]);
